--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -4,7 +4,8 @@
 
     body {
 	  /*background-color: #9b8a76;*/
-     background:#fff;
+     /*background:#fff;*/
+	 background-color: #d7cec5;
 	 font-family: 'PT Sans', sans-serif;
 	 font-size:16px;
      
