Changement de la couleur de fond

--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -5,7 +5,7 @@
     body {
 	  /*background-color: #9b8a76;*/
      /*background:#fff;*/
-	 background-color: #d7cec5;
+	 background-color: #FEFFF9;
 	 font-family: 'PT Sans', sans-serif;
 	 font-size:16px;
      
@@ -15,8 +15,7 @@
 	
 	#header{
 		min-height:282px;
-		background-image:url(../img/header2.png);
-		background-repeat:repeat-x;
+		background-color: #FEFFF9;		
 		margin-bottom:30px;
 		
 	}
