--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -426,6 +426,48 @@ table tfoot td .actions select {
 }  
 
 
+/* zoom sur les images des produits */
+
+
+figure 
+{
+  width: 120px;
+  float: left;
+  margin: 0 20px 0 0;
+  background: white;
+  border: 10px solid white;
+  -webkit-box-shadow: 0 3px 10px #ccc;
+  -moz-box-shadow: 0 3px 10px #ccc;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 1s ease;
+  position: relative;
+}
+
+figcaption 
+{
+  text-align: center;
+  display: block;
+  font-size: 12px;
+  font-style: italic;
+}
+
+
+figure:hover
+{
+  -webkit-transform: rotate(-1deg); -moz-transform: rotate(1deg);
+  -webkit-box-shadow: 0 3px 10px #666; -moz-box-shadow: 0 3px 10px #666;
+}
+
+figure:focus
+{
+  outline: none;
+  -webkit-transform: rotate(-3deg) scale(2.5); -moz-transform: rotate(-3deg) scale(2.5);
+   -webkit-box-shadow: 0 3px 10px #666; -moz-box-shadow: 0 3px 10px #666;
+  z-index: 9999;
+}
+
 	
 	
 	
