--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -16,7 +16,7 @@
 	#header{
 		min-height:282px;
 		background-color: #FEFFF9;		
-		margin-bottom:30px;
+		/*margin-bottom:30px;*/
 		
 	}
 	
@@ -120,7 +120,7 @@
 	  position: relative;
             
       
-	  height: 400px;      
+	  height: 350px;      
 	  margin: 0 auto;
 	  background: url('../img/banniere2.png') no-repeat;
 	  border: 0;
