changement de la banniere changement du logo pour la modifi du compte message de deconnexion

--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -124,6 +124,7 @@
 	  margin: 0 auto;
 	  background: url('../img/banniere2.png') no-repeat;
 	  border: 0;
+	  margin-bottom:30px;
 	  
       
 	}
