--- a/lefleuriste/public/css/speciale.css
+++ b/lefleuriste/public/css/speciale.css
@@ -52,6 +52,8 @@
 	border: 0;
 	background: black;
 	background: -webkit-gradient(linear, 0 0, 100% 0, from(#F2F2F2), to(#F2F2F2), color-stop(50%, #D7D7D7));
+	background: -moz-linear-gradient(#F2F2F2, #D7D7D7);
+	background: linear-gradient(#F2F2F2, #D7D7D7);
 	}
 	
     /* CUSTOMIZE THE NAVBAR
@@ -357,7 +359,7 @@ figure:hover
 figure:focus
 {
   outline: none;
-  -webkit-transform: rotate(-3deg) scale(2.5); -moz-transform: rotate(-3deg) scale(2.5);
+  -webkit-transform: rotate(-3deg) scale(4); -moz-transform: rotate(-3deg) scale(4);
    -webkit-box-shadow: 0 3px 10px #666; -moz-box-shadow: 0 3px 10px #666;
   z-index: 9999;
 }
